--- a/index.html
+++ b/index.html
@@ -1,218 +1,165 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>E-Fix ReparaÃ§Ãµes ElectrÃ³nicas</title>
-		<meta charset="utf-8" />
+		<title>E-Fix ' Electrónica</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="icon" href="images/favicon.ico" type="image/x-icon">
 	</head>
-	<body class="is-preload">
+	<body class="homepage is-preload">
 		<div id="page-wrapper">
+
 			<!-- Header -->
-				<div id="header">
+				<section id="header">
 
-					<!-- Nav -->
-						<nav id="nav">
-							<ul>
-								<li class="current"><a href="index.html">E-Fix</a></li>
-								<li>
-									<a href="#">Dropdown</a>
-									<ul>
-										<li><a href="#">Lorem dolor</a></li>
-										<li><a href="#">Magna phasellus</a></li>
-										<li><a href="#">Etiam sed tempus</a></li>
-										<li>
-											<a href="#">Submenu</a>
-											<ul>
-												<li><a href="#">Lorem dolor</a></li>
-												<li><a href="#">Phasellus magna</a></li>
-												<li><a href="#">Magna phasellus</a></li>
-												<li><a href="#">Etiam nisl</a></li>
-												<li><a href="#">Veroeros feugiat</a></li>
-											</ul>
-										</li>
-										<li><a href="#">Veroeros feugiat</a></li>
-									</ul>
-								</li>
-								<li><a href="two-sidebar.html">PorquÃª nÃ³s?</a></li>
-								<li><a href="no-sidebar.html">Contacto</a></li>
-							</ul>
-						</nav>
+					<h1>
+						<a href="index.html">
+							<img width="150" height="150" src="images/e-fix-vector.svg" alt="e-fix">
+						</a>
+					</h1>
+					    <h2 style="font-size: 1em; text-align: center; margin-top: -15px; color: #666;">Electrónica</h2>
 
-				</div>
+					<nav id="nav">
+						<ul>
+							<li class="current"><a href="index.html">Home</a></li>
+							<li><a href="#intro">Serviços</a></li>
+							<li><a href="#footer">Contactos</a></li>
+						</ul>
+					</nav>
 
-			<!-- Banner -->
-				<section id="banner">
-					<header>
-						<h2>E-Fix: <em>Especialistas em  <a href="https://en.wikipedia.org/wiki/High_fidelity">Hi-fi</a></em></h2>
-						<a href="#" class="button">Saber mais</a>
-					</header>
+
+					<!-- Banner -->
+						<section id="banner">
+						</section>
+
+					<!-- Intro -->
+						<section id="intro" class="container">
+							<div class="row">
+								<div class="col-4 col-12-medium">
+									<section class="first">
+										<i class="icon solid featured fa-cog"></i>
+										<header>
+											<h2>Reparações</h2>
+										</header>
+										<p>Placas, circuitos, etc.</p>
+									</section>
+								</div>
+								<div class="col-4 col-12-medium">
+									<section class="middle">
+										<i class="icon solid featured alt fa-bolt"></i>
+										<header>
+											<h2>Dimensionamento</h2>
+										</header>
+										<p>Desenho de PCBs e CIs.</p>
+									</section>
+								</div>
+								<div class="col-4 col-12-medium">
+									<section class="last">
+										<i class="icon solid featured alt2 fa-music"></i>
+										<header>
+											<h2>Audio</h2>
+										</header>
+										<p>Amplificadores Hi-Fi.</p>
+									</section>
+								</div>
+							</div>
+						</section>
+
 				</section>
 
-			<!-- Highlights -->
-				<section class="wrapper style1">
+			<!-- Main -->
+				<section id="main">
 					<div class="container">
-						<div class="row gtr-200">
-							<section class="col-4 col-12-narrower">
-								<div class="box highlight">
-									<i class="icon solid major fa-paper-plane"></i>
-									<h3>This Is Important</h3>
-									<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
-								</div>
-							</section>
-							<section class="col-4 col-12-narrower">
-								<div class="box highlight">
-									<i class="icon solid major fa-pencil-alt"></i>
-									<h3>Also Important</h3>
-									<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
-								</div>
-							</section>
-							<section class="col-4 col-12-narrower">
-								<div class="box highlight">
-									<i class="icon solid major fa-wrench"></i>
-									<h3>Probably Important</h3>
-									<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
-								</div>
-							</section>
-						</div>
-					</div>
-				</section>
+						<div class="row">
+							<div class="col-12">
 
-			<!-- Gigantic Heading -->
-				<section class="wrapper style2">
-					<div class="container">
+					<!-- Portefólio com Pequenas Secções -->
+					<section>
 						<header class="major">
-							<h2> neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibu</h2>
-							<p> neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibu</p>
+							<h2>Portefólio</h2>
 						</header>
-					</div>
-				</section>
-
-			<!-- Posts -->
-				<section class="wrapper style1">
-					<div class="container">
 						<div class="row">
-							<section class="col-6 col-12-narrower">
-								<div class="box post">
-									<a href="#" class="image left"><img src="images/pic01.jpg" alt="" /></a>
-									<div class="inner">
-										<h3>The First Thing</h3>
-										<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
-									</div>
-								</div>
-							</section>
-							<section class="col-6 col-12-narrower">
-								<div class="box post">
-									<a href="#" class="image left"><img src="images/pic02.jpg" alt="" /></a>
-									<div class="inner">
-										<h3>The Second Thing</h3>
-										<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
-									</div>
-								</div>
-							</section>
-						</div>
-						<div class="row">
-							<section class="col-6 col-12-narrower">
-								<div class="box post">
-									<a href="#" class="image left"><img src="images/pic03.jpg" alt="" /></a>
-									<div class="inner">
-										<h3>The Third Thing</h3>
-										<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
-									</div>
-								</div>
-							</section>
-							<section class="col-6 col-12-narrower">
-								<div class="box post">
-									<a href="#" class="image left"><img src="images/pic04.jpg" alt="" /></a>
-									<div class="inner">
-										<h3>The Fourth Thing</h3>
-										<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
-									</div>
-								</div>
-							</section>
-						</div>
-					</div>
-				</section>
+							<!-- Secção do Portefólio 1 -->
+							<div class="col-3 col-6-medium col-12-small">
+								<section class="box">
+									<header>
+										<h3>Reparação de Trackers GPS</h3>
+									</header>
+									<p>Reparação de dispositivos de rastreamento GPS para várias aplicações.</p>
+								</section>
+							</div>
 
-			<!-- CTA -->
-				<section id="cta" class="wrapper style3">
-					<div class="container">
-						<header>
-							<h2>Are you ready to continue your quest?</h2>
-							<a href="#" class="button">Insert Coin</a>
-						</header>
+							<!-- Secção do Portefólio 2 -->
+							<div class="col-3 col-6-medium col-12-small">
+								<section class="box">
+									<header>
+										<h3>Design de PCB</h3>
+									</header>
+									<p>Design de placas de circuito impresso para esculturas de iluminação com elementos eletromagnéticos.</p>
+								</section>
+							</div>
+
+							<!-- Secção do Portefólio 3 -->
+							<div class="col-3 col-6-medium col-12-small">
+								<section class="box">
+									<header>
+										<h3>Reparação de Placas de Domótica</h3>
+									</header>
+									<p>Reparação de placas de controlo domótico para portões automáticos e outros sistemas inteligentes.</p>
+								</section>
+							</div>
+
+
+							<!-- Secção do Portefólio 4 -->
+							<div class="col-3 col-6-medium col-12-small">
+								<section class="box">
+									<header>
+										<h3>Design de Amplificadores High End</h3>
+									</header>
+									<p>Design e construção de amplificadores de áudio de alta qualidade do zero.</p>
+								</section>
+							</div>
+						</div>
+					</section>
+
+							</div>
+						</div>
 					</div>
 				</section>
 
 			<!-- Footer -->
-				<div id="footer">
+				<section id="footer">
 					<div class="container">
 						<div class="row">
-							<section class="col-3 col-6-narrower col-12-mobilep">
-								<h3>Links to Stuff</h3>
-								<ul class="links">
-									<li><a href="#">Mattis et quis rutrum</a></li>
-									<li><a href="#">Suspendisse amet varius</a></li>
-									<li><a href="#">Sed et dapibus quis</a></li>
-									<li><a href="#">Rutrum accumsan dolor</a></li>
-									<li><a href="#">Mattis rutrum accumsan</a></li>
-									<li><a href="#">Suspendisse varius nibh</a></li>
-									<li><a href="#">Sed et dapibus mattis</a></li>
-								</ul>
-							</section>
-							<section class="col-3 col-6-narrower col-12-mobilep">
-								<h3>More Links to Stuff</h3>
-								<ul class="links">
-									<li><a href="#">Duis neque nisi dapibus</a></li>
-									<li><a href="#">Sed et dapibus quis</a></li>
-									<li><a href="#">Rutrum accumsan sed</a></li>
-									<li><a href="#">Mattis et sed accumsan</a></li>
-									<li><a href="#">Duis neque nisi sed</a></li>
-									<li><a href="#">Sed et dapibus quis</a></li>
-									<li><a href="#">Rutrum amet varius</a></li>
-								</ul>
-							</section>
-							<section class="col-6 col-12-narrower">
-								<h3>Get In Touch</h3>
-								<form>
-									<div class="row gtr-50">
-										<div class="col-6 col-12-mobilep">
-											<input type="text" name="name" id="name" placeholder="Name" />
-										</div>
-										<div class="col-6 col-12-mobilep">
-											<input type="email" name="email" id="email" placeholder="Email" />
-										</div>
-										<div class="col-12">
-											<textarea name="message" id="message" placeholder="Message" rows="5"></textarea>
-										</div>
-										<div class="col-12">
-											<ul class="actions">
-												<li><input type="submit" class="button alt" value="Send Message" /></li>
-											</ul>
-										</div>
-									</div>
-								</form>
-							</section>
+							<div class="col-4 col-12-medium">
+								<section>
+									<header>
+										<h2>Contactos</h2>
+									</header>
+									<ul class="social">
+										<li> <a class="icon brands fa-instagram" href="https://instagram.com/e_fix_pt" target="_blank">
+												<span class="label">Instagram</span></a></li>
+										<li><a class="icon brands fa-whatsapp" href="https://wa.me/916663059" target="_blank"><span class="label">WhatsApp</span></a></li>
+									</ul>
+									<ul class="contact">
+										<li>
+											<h3>Localização</h3>
+											<p>
+												Lisboa - Amadora - Pombal
+											</p>
+										</li>
+										<li>
+											<h3>Telefone</h3>
+											<p>(+351) 916 663 059</p>
+										</li>
+									</ul>
+								</section>
+							</div>
+							<div class="col-12">
+							</div>
 						</div>
 					</div>
-
-					<!-- Icons -->
-						<ul class="icons">
-							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-							<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-							<li><a href="#" class="icon brands fa-google-plus-g"><span class="label">Google+</span></a></li>
-						</ul>
-
-					<!-- Copyright -->
-						<div class="copyright">
-							<ul class="menu">
-								<li>&copy; Untitled. All rights reserved</li><li>Design: <a href="http://net"> UP</a></li>
-							</ul>
-						</div>
-
-				</div>
+				</section>
 
 		</div>
 
@@ -225,4 +172,4 @@
 			<script src="assets/js/main.js"></script>
 
 	</body>
-</html>
+</html>   
