--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>E-Fix ' Electrónica</title>
+		<title>E-Fix Electrónica</title>
+		<metas charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="icon" href="images/favicon.ico" type="image/x-icon">
@@ -17,7 +18,7 @@
 							<img width="150" height="150" src="images/e-fix-vector.svg" alt="e-fix">
 						</a>
 					</h1>
-					    <h2 style="font-size: 1em; text-align: center; margin-top: -15px; color: #666;">Electrónica</h2>
+					    <h2 style="font-size: 1em; text-align: center; margin-top: 0px; color: #666;">Electrónica</h2>
 
 					<nav id="nav">
 						<ul>
@@ -83,7 +84,7 @@
 							<div class="col-3 col-6-medium col-12-small">
 								<section class="box">
 									<header>
-										<h3>Reparação de Trackers GPS</h3>
+										<h3>Trackers GPS</h3>
 									</header>
 									<p>Reparação de dispositivos de rastreamento GPS para várias aplicações.</p>
 								</section>
@@ -95,7 +96,7 @@
 									<header>
 										<h3>Design de PCB</h3>
 									</header>
-									<p>Design de placas de circuito impresso para esculturas de iluminação com elementos eletromagnéticos.</p>
+									<p>Design de PCBs e arduino para coordenação de iluminação e EMs.</p>
 								</section>
 							</div>
 
@@ -103,9 +104,9 @@
 							<div class="col-3 col-6-medium col-12-small">
 								<section class="box">
 									<header>
-										<h3>Reparação de Placas de Domótica</h3>
+										<h3>Placas de Domótica</h3>
 									</header>
-									<p>Reparação de placas de controlo domótico para portões automáticos e outros sistemas inteligentes.</p>
+									<p>Reparação de placas de controlo domótico para sistemas inteligentes.</p>
 								</section>
 							</div>
 
@@ -114,9 +115,9 @@
 							<div class="col-3 col-6-medium col-12-small">
 								<section class="box">
 									<header>
-										<h3>Design de Amplificadores High End</h3>
+										<h3>Amplificadores</h3> <h3>Hi-Fi</h3>
 									</header>
-									<p>Design e construção de amplificadores de áudio de alta qualidade do zero.</p>
+									<p>Design e construção de amplificadores de áudio high fidelity.</p>
 								</section>
 							</div>
 						</div>
@@ -145,7 +146,7 @@
 										<li>
 											<h3>Localização</h3>
 											<p>
-												Lisboa - Amadora - Pombal
+												Lisboa - Pombal - Leiria
 											</p>
 										</li>
 										<li>
