--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>E-Fix Electrónica</title>
 		<meta charset="UTF-8">
+		<title>E-Fix ElectrÃ³nica</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="icon" href="images/favicon.ico" type="image/x-icon">
@@ -18,12 +18,12 @@
 							<img width="150" height="150" src="images/e-fix-vector.svg" alt="e-fix">
 						</a>
 					</h1>
-					    <h2 style="font-size: 1em; text-align: center; margin-top: 0px; color: #666;">Electrónica</h2>
+					    <h2 style="font-size: 1em; text-align: center; margin-top: 0px; color: #666;">ElectrÃ³nica</h2>
 
 					<nav id="nav">
 						<ul>
 							<li class="current"><a href="index.html">Home</a></li>
-							<li><a href="#intro">Serviços</a></li>
+							<li><a href="#intro">ServiÃ§os</a></li>
 							<li><a href="#footer">Contactos</a></li>
 						</ul>
 					</nav>
@@ -40,7 +40,7 @@
 									<section class="first">
 										<i class="icon solid featured fa-cog"></i>
 										<header>
-											<h2>Reparações</h2>
+											<h2>ReparaÃ§Ãµes</h2>
 										</header>
 										<p>Placas, circuitos, etc.</p>
 									</section>
@@ -74,50 +74,50 @@
 						<div class="row">
 							<div class="col-12">
 
-					<!-- Portefólio com Pequenas Secções -->
+					<!-- PortefÃ³lio com Pequenas SecÃ§Ãµes -->
 					<section>
 						<header class="major">
-							<h2>Portefólio</h2>
+							<h2>PortefÃ³lio</h2>
 						</header>
 						<div class="row">
-							<!-- Secção do Portefólio 1 -->
+							<!-- SecÃ§Ã£o do PortefÃ³lio 1 -->
 							<div class="col-3 col-6-medium col-12-small">
 								<section class="box">
 									<header>
 										<h3>Trackers GPS</h3>
 									</header>
-									<p>Reparação de dispositivos de rastreamento GPS para várias aplicações.</p>
+									<p>ReparaÃ§Ã£o de dispositivos de rastreamento GPS para vÃ¡rias aplicaÃ§Ãµes.</p>
 								</section>
 							</div>
 
-							<!-- Secção do Portefólio 2 -->
+							<!-- SecÃ§Ã£o do PortefÃ³lio 2 -->
 							<div class="col-3 col-6-medium col-12-small">
 								<section class="box">
 									<header>
 										<h3>Design de PCB</h3>
 									</header>
-									<p>Design de PCBs e arduino para coordenação de iluminação e EMs.</p>
+									<p>Design de PCBs e arduino para coordenaÃ§Ã£o de iluminaÃ§Ã£o e EMs.</p>
 								</section>
 							</div>
 
-							<!-- Secção do Portefólio 3 -->
+							<!-- SecÃ§Ã£o do PortefÃ³lio 3 -->
 							<div class="col-3 col-6-medium col-12-small">
 								<section class="box">
 									<header>
-										<h3>Placas de Domótica</h3>
+										<h3>Placas de DomÃ³tica</h3>
 									</header>
-									<p>Reparação de placas de controlo domótico para sistemas inteligentes.</p>
+									<p>ReparaÃ§Ã£o de placas de controlo domÃ³tico para sistemas inteligentes.</p>
 								</section>
 							</div>
 
 
-							<!-- Secção do Portefólio 4 -->
+							<!-- SecÃ§Ã£o do PortefÃ³lio 4 -->
 							<div class="col-3 col-6-medium col-12-small">
 								<section class="box">
 									<header>
 										<h3>Amplificadores</h3> <h3>Hi-Fi</h3>
 									</header>
-									<p>Design e construção de amplificadores de áudio high fidelity.</p>
+									<p>Design e construÃ§Ã£o de amplificadores de Ã¡udio high fidelity.</p>
 								</section>
 							</div>
 						</div>
@@ -144,7 +144,7 @@
 									</ul>
 									<ul class="contact">
 										<li>
-											<h3>Localização</h3>
+											<h3>LocalizaÃ§Ã£o</h3>
 											<p>
 												Lisboa - Pombal - Leiria
 											</p>
