--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
 									<section class="middle">
 										<i class="icon solid featured alt fa-bolt"></i>
 										<header>
-											<h2>Dimensionamento</h2>
+											<h2>Concepção e execução</h2>
 										</header>
-										<p>Desenho de PCBs e CIs.</p>
+										<p>Soluções para circuitos personalizados.</p>
 									</section>
 								</div>
 								<div class="col-4 col-12-medium">
