--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 										<header>
 											<h2>Concepção e execução</h2>
 										</header>
-										<p>Soluções para circuitos personalizados.</p>
+										<p>Soluções personalizadas em electrónica.</p>
 									</section>
 								</div>
 								<div class="col-4 col-12-medium">
