--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 										<header>
 											<h2>Reparações</h2>
 										</header>
-										<p>Placas, circuitos, etc.</p>
+										<p>Equipamentos diversos, placas, circuitos, etc.</p>
 									</section>
 								</div>
 								<div class="col-4 col-12-medium">
